# policy-react

./: .gitignore  README.md  pyproject.toml
src/: dataset.py  main.py  model.py  rewards.py  schemas.py
src/wandb/: latest-run
src/wandb/run-20250505_230646-4yr70iv9/files/: wandb-metadata.json
src/wandb/run-20250505_231111-9nhe3vwr/files/: requirements.txt  wandb-metadata.json
