[project]
name = "policyreact"
version = "0.1.0"
description = "ReAct + GRPO"
authors = [
    {name = "Dmitry Aspisov", email = "dmitry.aspisov@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "datasets (>=3.5.1,<4.0.0)",
    "trl (>=0.17.0,<0.18.0)",
    "peft (>=0.15.2,<0.16.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "sentencepiece (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
